fixed logo on mobile in index

--- a/style/index.css
+++ b/style/index.css
@@ -8,5 +8,7 @@
     text-align:center;
 }
 
-
+#logo {
+    height: 30vh;
+}
 
